Fix scrollbar in toolbar multi-select when using custom fonts. #1676

--- a/desktop/cmp/input/Select.scss
+++ b/desktop/cmp/input/Select.scss
@@ -123,6 +123,10 @@
     &__value-container--is-multi {
       height: 28px;
       overflow-y: auto !important;
+
+      & > div {
+        margin: 0 2px;
+      }
     }
   }
 }
